# adk-samples

./: .gitignore  CLAUDE.md
python/agents/commercial-banking-onboarding/: .dockerignore  .env.example  Dockerfile  Dockerfile.cloud  Dockerfile.minimal  Dockerfile.simple  Dockerfile.uv  Procfile  README.md  agent_invocation_test.py  comprehensive_agent_test.py  comprehensive_demo.py  comprehensive_enhanced_test.py  demo_banking_questions.py  deploy_cloud.py  deploy_cloud_run.py  deploy_minimal.py  deployment_info.json  detailed_agent_verification.py  enhanced_demo.py  final_agent_test.py  final_demo.py  flow_demonstration.py  interactive_banking.py  interactive_session.py  live_demo.py  logic_test.py  main.py  proper_agent_test.py  pyproject.toml  requirements.txt  simple_agent_test.py  simple_deploy.py  simple_enhanced_test.py  simple_test.py  test_application.py  test_application_simple.py  test_enhanced_system.py  vertexai_agent_test.py  working_demo.py
python/agents/commercial-banking-onboarding/commercial_banking_onboarding/: __init__.py  agent.py  config.py  enhanced_agent.py  prompt.py
python/agents/commercial-banking-onboarding/commercial_banking_onboarding/mock_apis/: base_api.py  core_banking_api.py
python/agents/commercial-banking-onboarding/commercial_banking_onboarding/shared_libraries/: __init__.py  mock_services.py  types.py  utils.py  (+1 more)
python/agents/commercial-banking-onboarding/deployment/: __init__.py  deploy.py  test_deployment.py
python/agents/commercial-banking-onboarding/eval/: __init__.py  test_eval.py
python/agents/commercial-banking-onboarding/references/: commercial_product_types_matrix.csv  documentation_requirements_matrix.csv  kyc_onboarding_requirements_matrix.csv  onboarding_workflow_matrix.csv  risk_monitoring_matrix.csv  technology_automation_matrix.csv
python/agents/commercial-banking-onboarding/tests/: __init__.py  test_agents.py
python/agents/wealth-management/: .dockerignore  .env.example  ADK_PATTERNS_AND_MEMORY_GUIDE.md  CLIENT_ANALYTICS_GUIDE.md  Dockerfile  EVALUATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLVED.md  QUICK_START.md  README.md  SAMPLE_CLIENT_IDS.md  WORKFLOW_TEST_QUESTIONS.md  check_available_accounts.py  comprehensive_agentic_workflows_wealth_management.csv  comprehensive_test_results.json  demo_showcase.py  deploy_cloud_run.py  deployment_info.json  generate_sample_data.py  main.py  pyproject.toml  requirements.txt  run_adk_ui.py  run_enhanced_agent.py  run_enterprise_demo.py  run_specific_workflow.py  test_agent_direct.py  test_client_analytics.py  test_runner.py
python/agents/wealth-management/datasets/: advisors.json  clients.json  market_scenarios.json  relationship_managers.json  relationships.json  summary.json  transactions.json
python/agents/wealth-management/deployment/: deploy.py  deploy_cloud_run.py
python/agents/wealth-management/eval/: __init__.py  test_agent_integration.py  test_eval.py  wealth_management_evaluator.py
python/agents/wealth-management/wealth_management/: __init__.py  agent.py  agent_enhanced.py  enhanced_agent.py  prompt.py  workflow_router.py
(+76 files in other folders)
